--- a/assn-4/contact.html
+++ b/assn-4/contact.html
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1><a href="mailto:knic1468@vandals.uidaho.edu">Contact Me</a></h1>
+  <h1><a href="mailto:#">Contact Me</a></h1>
     <iframe width="600" height="500" src="https://maps.google.com/maps?q=875%20Perimeter%20Dr,%20Moscow,%20ID%2083844&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
   <p class="w3-xlarge">Alma Mater, University of Idaho</p>
 </header>
